Cleaned up Java Code to conform to Java 13